inou/prp/tests/errors/underflow_unsigned_expr.prp
/*
:name: underflow_unsigned_expr
:type: error
:error: does not fit
*/

// A signed expression whose value is negative does not fit an unsigned
// destination. Use an explicit bit-select to force the bit pattern.

mut v8:s8 = -1
const ones = v8 | 0xff

//mut c_ok:u8 = nil
//wrap c_ok = ones
//cassert(c_ok == 255)

const c:u8 = ones  // locate_error_here
